fixes and samples

--- a/dataplicity/examples/simple/dataplicity.conf
+++ b/dataplicity/examples/simple/dataplicity.conf
@@ -11,4 +11,7 @@ class = examples.simple
 
 [task:timelogger]
 # Run the timelogger task
-run = dataplicity.tasks.timelogger.TimeLoggerTask
+run = dataplicity.tasks.timelogger.TimeLogger
+
+[register]
+ui = ./ui.xml
