--- a/dataplicity/examples/timelinetest/dataplicity.conf
+++ b/dataplicity/examples/timelinetest/dataplicity.conf
@@ -1,5 +1,4 @@
-# Simplest dataplicity project I can conceive of
-# Just logs the current time every second
+# Timeline test
 
 [extend]
 # Take defaults from here
