fix for int / long types

--- a/dataplicity/examples/m2m/dataplicity.conf
+++ b/dataplicity/examples/m2m/dataplicity.conf
@@ -5,7 +5,7 @@ conf = /etc/dataplicity/dataplicity.conf
 #url = http://dataplicity.localhost.com:8000/dataplicityapi/jsonrpc/
 
 [m2m]
-url = wss://home.willmcgugan.com:8888/m2m/
+url = wss://m2m.dev.dataplicity.com/m2m/
 
 [device]
 class = examples.m2m
