--- a/dataplicity/examples/m2m/dataplicity.conf
+++ b/dataplicity/examples/m2m/dataplicity.conf
@@ -4,8 +4,8 @@ conf = /etc/dataplicity/dataplicity.conf
 #[server]
 #url = http://dataplicity.localhost.com:8000/dataplicityapi/jsonrpc/
 
-[m2m]
-url = wss://m2m.dev.dataplicity.com/m2m/
+#[m2m]
+#url = wss://m2m.dev.dataplicity.com/m2m/
 
 [device]
 class = examples.m2m
