remote keyboard example

--- a/dataplicity/examples/keyboard/dataplicity.conf
+++ b/dataplicity/examples/keyboard/dataplicity.conf
@@ -11,7 +11,14 @@ class = examples.keyboard
 [register]
 ui = ./ui.xml
 
+[py]
+path = ./py
+
 [m2m]
 enabled = yes
+
+[tasks:keyboard]
+run = keyboard.KeyboardTask
+poll = 1
 
 [keyboard:keyboard1]
