--- a/dataplicity/examples/keyboard/dataplicity.conf
+++ b/dataplicity/examples/keyboard/dataplicity.conf
@@ -17,8 +17,17 @@ path = ./py
 [m2m]
 enabled = yes
 
-[tasks:keyboard]
+[task:keyboard]
 run = keyboard.KeyboardTask
 poll = 1
 
 [keyboard:keyboard1]
+
+[buttons:group1]
+names = fire
+    start
+    stop
+    left
+    right
+    up
+    down
