added no-sync options, portforwarding config

--- a/dataplicity/examples/pf/dataplicity.conf
+++ b/dataplicity/examples/pf/dataplicity.conf
@@ -8,10 +8,9 @@ class = examples.pf
 ui = ./ui.xml
 
 [m2m]
+url=ws://127.0.0.1:90/m2m/
 enabled = yes
 identity = 055b945e-7f14-11e5-ae34-8344331c88e4
 
-[terminal:shell]
-
-[terminal:htop]
-command = htop
+[portforward:web]
+port = 80
